crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@226.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('null', '(123).type()');"
---
SelectStmt@0..48
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..46
    FuncCall@7..46
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..30
        Sconst@24..30 "'null'"
      Ascii44@30..31 ","
      Whitespace@31..32 " "
      AConst@32..46
        Sconst@32..46 "'(123).type()'"
  Ascii41@46..47 ")"
  Ascii59@47..48 ";"

