crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@228.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('{\"a\": 2}', '($.a - 5).abs() + 10');"
---
SelectStmt@0..60
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..58
    FuncCall@7..58
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..34
        Sconst@24..34 "'{\"a\": 2}'"
      Ascii44@34..35 ","
      Whitespace@35..36 " "
      AConst@36..58
        Sconst@36..58 "'($.a - 5).abs() + 10'"
  Ascii41@58..59 ")"
  Ascii59@59..60 ";"

