crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@229.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('{\"a\": 2.5}', '-($.a * $.a).floor() % 4.3');"
---
SelectStmt@0..68
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..66
    FuncCall@7..66
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..36
        Sconst@24..36 "'{\"a\": 2.5}'"
      Ascii44@36..37 ","
      Whitespace@37..38 " "
      AConst@38..66
        Sconst@38..66 "'-($.a * $.a).floor() ..."
  Ascii41@66..67 ")"
  Ascii59@67..68 ";"

