crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@23.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb '[1]' @? 'lax $[10000000000000000]';"
---
SelectStmt@0..49
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..48
    Ident@7..12 "jsonb"
    Whitespace@12..13 " "
    AExpr@13..48
      TypeCast@13..18
        AConst@13..18
          Sconst@13..18 "'[1]'"
      Whitespace@18..19 " "
      Op@19..21 "@?"
      Whitespace@21..22 " "
      AConst@22..48
        Sconst@22..48 "'lax $[10000000000000 ..."
  Ascii59@48..49 ";"

