crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@230.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[1, 2, 3]', '($[*] > 2) ? (@ == true)');"
---
SelectStmt@0..65
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..63
    FuncCall@7..63
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..35
        Sconst@24..35 "'[1, 2, 3]'"
      Ascii44@35..36 ","
      Whitespace@36..37 " "
      AConst@37..63
        Sconst@37..63 "'($[*] > 2) ? (@ == t ..."
  Ascii41@63..64 ")"
  Ascii59@64..65 ";"

