crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@231.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[1, 2, 3]', '($[*] > 3).type()');"
---
SelectStmt@0..58
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..56
    FuncCall@7..56
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..35
        Sconst@24..35 "'[1, 2, 3]'"
      Ascii44@35..36 ","
      Whitespace@36..37 " "
      AConst@37..56
        Sconst@37..56 "'($[*] > 3).type()'"
  Ascii41@56..57 ")"
  Ascii59@57..58 ";"

