crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@235.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[1,null,true,\"11\",[],[1],[1,2,3],{},{\"a\":1,\"b\":2}]', 'strict $[*].size()', silent => true);"
---
SelectStmt@0..116
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..114
    FuncCall@7..114
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..76
        Sconst@24..76 "'[1,null,true,\"11\",[] ..."
      Ascii44@76..77 ","
      Whitespace@77..78 " "
      AConst@78..98
        Sconst@78..98 "'strict $[*].size()'"
      Ascii44@98..99 ","
      Whitespace@99..100 " "
      NamedArgExpr@100..114
        Ident@100..106 "silent"
        Whitespace@106..107 " "
        EqualsGreater@107..109 "=>"
        Whitespace@109..110 " "
        AConst@110..114
          TrueP@110..114 "true"
  Ascii41@114..115 ")"
  Ascii59@115..116 ";"

