crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@236.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[1,null,true,\"11\",[],[1],[1,2,3],{},{\"a\":1,\"b\":2}]', 'lax $[*].size()');"
---
SelectStmt@0..97
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..95
    FuncCall@7..95
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..76
        Sconst@24..76 "'[1,null,true,\"11\",[] ..."
      Ascii44@76..77 ","
      Whitespace@77..78 " "
      AConst@78..95
        Sconst@78..95 "'lax $[*].size()'"
  Ascii41@95..96 ")"
  Ascii59@96..97 ";"

